--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,12 +51,16 @@ p {
 }
 
 .hero {
-    height: 800px;
-    width: 100%;
     margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
-    background-size: cover;
-    background-position: center;
+}
+
+figure img {
+    width: 100%;
+}
+
+figcaption {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-align: center;
 }
 
 .float-left {
